POC started to build runnable jar